project(wallpapers)
set(PROJECT_VERSION "5.4.3")
set(PROJECT_VERSION_MAJOR 5)
cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)

include(WriteBasicConfigVersionFile)
include(FeatureSummary)

find_package(ECM 0.0.9 REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})

include(KDEInstallDirs)
include(KDECMakeSettings)
include(KDECompilerSettings)
include(GenerateExportHeader)

install(DIRECTORY Alps DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY BlueFlower DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Dance_of_the_Spirits DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY EveningGlow DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Fog DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY ForestFog DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY ForestHouse DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY GereatHeron DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Green_Leaves DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Grey DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY IndianSummer DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Landmannalaugar DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Poppy DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Spray DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Sunset DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Tauplitz DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY WalmendingerHorn DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Water DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Whisker_Grass DESTINATION ${WALLPAPER_INSTALL_DIR})
